# public/api.yaml
@@ -51,7 +51,6 @@ paths:
                 type: array
                 items: 
                   type: string  
-
   /users/loginusers:
     post:
       summary: user login.
@@ -79,7 +78,6 @@ paths:
                 type: array
                 items: 
                   type: string  
-
   /users/genrateNewToken:
     post:
       summary: create new access and refress token.
@@ -96,7 +94,6 @@ paths:
                 type: array
                 items: 
                   type: string  
-
   /users/logout:
     post:
       summary: user logout.
@@ -121,8 +118,7 @@ paths:
               schema: 
                 type: array
                 items: 
-                  type: string  
-            
+                  type: string            
   /users/googlelogin:
     get:
       summary: user googlelogin.
@@ -137,7 +133,8 @@ paths:
               schema: 
                 type: array
                 items: 
-                  type: string  
+                  type: string 
+
   /categories/list-category:
     get:
       parameters:
@@ -164,6 +161,32 @@ paths:
                 type: array
                 items: 
                   type: string  
+  /categories/add-category:
+    post:
+      summary: Add Category.
+      description: Optional extended description in CommonMark or HTML.
+      tags:
+        - categories
+      requestBody:
+        required: true
+        content:
+           application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items: 
+                  type: string
   /categories/update-category/{categori_id}:
     put:
       summary: Categories.
@@ -197,3 +220,407 @@ paths:
                 type: array
                 items: 
                   type: string 
+  /categories/delete-category/{categori_id}:
+    delete:
+      summary: delete Category.
+      description: Optional extended description in CommonMark or HTML.
+      tags:
+        - categories
+      parameters:
+        - in: path
+          name: categori_id
+          schema:
+            type: string
+          required: true
+          description: delete category.
+      requestBody:
+        required: true
+        content:
+           application/json:
+            schema:
+              type: object
+              properties:
+                categori_id:
+                  type: string
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items:  
+                  type: string
+
+  /subcategories/list-subcategory:
+    get:
+      summary: list subcategories.
+      description: Optional extended description in CommonMark or HTML.
+      tags:
+        - subcategories
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items: 
+                  type: string
+  /subcategories/add-subcategory:
+    post:
+      summary: Add subcategories.
+      description: Optional extended description in CommonMark or HTML.
+      tags:
+        - subcategories
+      requestBody:
+        required: true
+        content:
+           application/json:
+            schema:
+              type: object
+              properties:
+                categori_id:
+                  type: string
+                name:
+                  type: string
+                description:
+                  type: string
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items: 
+                  type: string
+  /subcategories/update-subcategory/{subcategori_id}:
+    put:
+      summary: update subcategories.
+      description: Optional extended description in CommonMark or HTML.
+      tags:
+        - subcategories
+      parameters:
+        - in: path
+          name: subcategori_id
+          schema:
+            type: string
+          required: true
+          description: Update subcategories.
+      requestBody:
+        required: true
+        content:
+           application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items:  
+                  type: string
+  /subcategories/delete-subcategory/{subcategori_id}:
+    delete:
+      summary: delete subcategory.
+      description: Optional extended description in CommonMark or HTML.
+      tags:
+        - subcategories
+      parameters:
+        - in: path
+          name: subcategori_id
+          schema:
+            type: string
+          required: true
+          description: delete subcategories.
+      requestBody:
+        required: true
+        content:
+           application/json:
+            schema:
+              type: object
+              properties:
+                subcategori_id:
+                  type: string
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items:  
+                  type: string
+
+  /products/list-product:
+    get:
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: integer
+          description: The number of items to skip before starting to collect the result set
+        - in: query
+          name: pageSize
+          schema:
+            type: integer
+          description: The numbers of items to return
+      summary: list products.
+      description: Optional extended description in CommonMark or HTML.
+      tags:
+        - products
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items: 
+                  type: string
+  /products/add-product:
+    post:
+      summary: Add product.
+      description: Optional extended description in CommonMark or HTML.
+      tags:
+        - products
+      requestBody:
+        required: true
+        content:
+           multipart/form-data:
+            schema:
+              type: object
+              properties:
+                categori_id:
+                  type: string
+                subcategori_id:
+                  type: string
+                name:
+                  type: string
+                description:
+                  type: string
+                price:
+                  type: string
+                stock:
+                  type: string
+                image:
+                  type: string
+                  format: binary
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items: 
+                  type: string
+  /products/update-product/{product_id}:
+    put:
+      summary: update products.
+      description: Optional extended description in CommonMark or HTML.
+      tags:
+        - products
+      parameters:
+        - in: path
+          name: product_id
+          schema:
+            type: string
+          required: true
+          description: Update products.
+      requestBody:
+        required: true
+        content:
+           application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+                price:
+                  type: string
+                stock:
+                  type: string
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items:  
+                  type: string
+  /products/delete-product/{product_id}:
+    delete:
+      summary: delete products.
+      description: Optional extended description in CommonMark or HTML.
+      tags:
+        - products
+      parameters:
+        - in: path
+          name: product_id
+          schema:
+            type: string
+          required: true
+          description: delete products.
+      requestBody:
+        required: true
+        content:
+           application/json:
+            schema:
+              type: object
+              properties:
+                subcategori_id:
+                  type: string
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items:  
+                  type: string
+
+
+  /variants/list-variant:
+    get:
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: integer
+          description: The number of items to skip before starting to collect the result set
+        - in: query
+          name: pageSize
+          schema:
+            type: integer
+          description: The numbers of items to return
+      summary: list variants.
+      description: Optional extended description in CommonMark or HTML.
+      tags:
+        - variants
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items: 
+                  type: string
+
+  /variants/add-variant:
+    post:
+      summary: Add variants.
+      description: Optional extended description in CommonMark or HTML.
+      tags:
+        - variants
+      requestBody:
+        required: true
+        content:
+           application/json:
+            schema:
+              type: object
+              properties:
+                categori_id:
+                  type: string
+                subcategori_id:
+                  type: string
+                product_id:
+                  type: string
+                price:
+                  type: string
+                stock:
+                  type: string
+                discount:
+                  type: string
+                atributes:
+                  type: string
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items: 
+                  type: string
+
+  /variants/update-variant/{variant_id}:
+    put:
+      summary: update variants.
+      description: Optional extended description in CommonMark or HTML.
+      tags:
+        - variants
+      parameters:
+        - in: path
+          name: variant_id
+          schema:
+            type: string
+          required: true
+          description: Update variants.
+      requestBody:
+        required: true
+        content:
+           application/json:
+            schema:
+              type: object
+              properties:
+                price:
+                  type: string
+                stock:
+                  type: string
+                discount:
+                  type: string
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items:  
+                  type: string
+
+  /variants/delete-variant/{variant_id}:
+    delete:
+      summary: delete products.
+      description: Optional extended description in CommonMark or HTML.
+      tags:
+        - variants
+      parameters:
+        - in: path
+          name: variant_id
+          schema:
+            type: string
+          required: true
+          description: delete variants.
+      requestBody:
+        required: true
+        content:
+           application/json:
+            schema:
+              type: object
+              properties:
+                variant_id:
+                  type: string
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items:  
+                  type: string
